Fix spacing and make custom checkbox styles

--- a/src/components/Recipe/style.css
+++ b/src/components/Recipe/style.css
@@ -10,6 +10,7 @@
 
 .recipe__title {
   font-size: 3rem;
+  margin-bottom: 2rem;
 }
 
 .recipe__description {
