--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ a {
 
 .section-heading {
   font-size: 1.8rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .page {
